# catawiki

./: .gitignore  pyproject.toml  readme.md
catawiki-app/: Dockerfile  docker-compose.yml  pyproject.toml
catawiki-app/src/app/: 📄_main.py
catawiki-app/src/app/helpers/: __init__.py  db.py  embeder.py  env.py
catawiki-app/src/app/pages/: 1_🔍_search.py  __init__.py
catawiki-cache/: __init__.py  categories.jsonl
catawiki-embed/: docker-compose.yml  pyproject.toml
catawiki-embed/src/job/: main.py
catawiki-embed/src/job/helpers/: __init__.py  compute.py  db.py  embeder.py  inputs.py  logger.py
catawiki-embed/src/job/sql/: get_image_data.sql  get_text_data.sql  init_embeddings.sql  set_embeddings.sql  set_index.sql
catawiki-scrape/: Dockerfile  docker-compose.yml  pyproject.toml
catawiki-scrape/src/job/: main.py
catawiki-scrape/src/job/helpers/: __init__.py  scraper.py
catawiki-scrape/src/job/sql/: init_products.sql  set_product.sql
