[tool.poetry]
name = "catawiki-app"
version = "0.1.0"
description = ""
authors = ["badr-ayour.el-amri <45420194+elamribadrayour@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
duckdb = "^1.1.0"
faiss-cpu = "^1.8.0.post1"
sentence-transformers = "^3.1.1"
numpy = "1.26.4"
pillow = "^10.4.0"


[tool.poetry.group.ci.dependencies]
ruff = "^0.6.6"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
