[tool.poetry]
name = "catawiki-scrape"
version = "0.1.0"
description = "Catawiki scraper"
authors = ["badr-ayour.el-amri <45420194+elamribadrayour@users.noreply.github.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
requests = "^2.32.3"
typer = "^0.12.5"
beautifulsoup4 = "^4.12.3"
result = "^0.17.0"
duckdb = "^1.1.0"


[tool.poetry.group.ci.dependencies]
ruff = "^0.6.6"
mypy = "^1.11.2"
types-requests = "^2.32.0.20240914"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.mypy-result]
ignore_errors = true